Fix some spacing and color mismatch

--- a/style.css
+++ b/style.css
@@ -68,7 +68,6 @@ body {
 
 .recipe {
   background-color: var(--white);
-  width: 100vw;
 }
 
 .recipe__image img {
@@ -89,8 +88,8 @@ body {
   gap: var(--space-24);
 }
 
-.vertical-space-32 {
-  height: var(--space-32);
+.instructions {
+  margin: var(--space-32) 0;
 }
 
 .recipe__content {
@@ -118,7 +117,7 @@ li {
 }
 
 table {
-  border-spacing: 0 var(--space-24);
+  border-spacing: 0 var(--space-12);
   padding-left: var(--space-32);
 }
 /* end of purpose: elements spacings */
@@ -145,6 +144,10 @@ p, li, td {
 }
 
 .preparation div {
+  color: var(--rose-800);
+}
+
+.preparation li::marker {
   color: var(--rose-800);
 }
 
